empty filters msg on logo click, fix margin slider cards on mobile

--- a/src/components/Home/style.scss
+++ b/src/components/Home/style.scss
@@ -14,6 +14,7 @@
   .slick-slide {
     width: 100%;
     height: 100%;
+    margin-top: .5rem;
   }
   .slick-arrow.slick-prev::before,
   .slick-arrow.slick-next::before {
